# mav_ts

./: WORKSPACE.bazel  package.json
js/: BUILD.bazel
react/: App.tsx  BUILD.bazel  index.html  rollup.config.js
rollup_bundle/: BUILD.bazel  package.json  rollup.config.js
tools/: bazel
